Index mit section und p

--- a/index.html
+++ b/index.html
@@ -2,15 +2,64 @@
 <html lang="de">
 
 <head>
-    <title>Home</title>
-    <meta name="author" content="Jens">
-    <meta name="description" content="CV of Jens">
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>The CV of Jens</title>
+    <meta name="description" content="CV of Jens">
+    <meta name="author" content="Jens">
 </head>
 
 <body>
-
+    <header>
+        <h1>Der Jens</h1>
+        <p>Data Master</p>
+    </header>
+    <main>
+        <article>
+            <h2>Profile</h2>
+            <p>
+                Hey, my name is Jens!<br>
+                I love to <em>structuring data</em> and optimizing processes.
+            </p>
+        </article>
+        <article>
+            <h2>Experiences</h2>
+            <section>
+                <header>
+                    <h3>Backoffice Manager</h3>
+                    <p>July 2017 - </p>
+                </header>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus, autem necessitatibus. Modi magnam
+                    consectetur reiciendis a id aperiam cupiditate totam eveniet excepturi! Expedita deserunt debitis
+                    inventore perferendis totam excepturi cupiditate!
+                </p>
+            </section>
+            <section>
+                <header>
+                    <h3>Web Design Freelancer & E-Commerce-Manager</h3>
+                    <p>August 2006 - 2017</p>
+                </header>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus, autem necessitatibus. Modi magnam
+                    consectetur reiciendis a id aperiam cupiditate totam eveniet excepturi! Expedita deserunt debitis
+                    inventore perferendis totam excepturi cupiditate!
+                </p>
+            </section>
+        </article>
+        <article>
+            <h2>Skills</h2>
+            <section>
+                <h3>Soft Skills</h3>
+            </section>
+            <section>
+                <h3>Technische Skills</h3>
+            </section>
+        </article>
+        <article>
+            <h2>contact</h2>
+        </article>
+    </main>
 </body>
 
 </html>
