index with links and lists

--- a/index.html
+++ b/index.html
@@ -13,16 +13,22 @@
     <header>
         <h1>Der Jens</h1>
         <p>Data Master</p>
+        <nav>
+            <a href="#profile">Profile</a>
+            <a href="#experience">Experience</a>
+            <a href="#skills">Skills</a>
+            <a href="#contact">Contact</a>
+        </nav>
     </header>
     <main>
-        <article>
+        <article id="profile">
             <h2>Profile</h2>
             <p>
                 Hey, my name is Jens!<br>
-                I love to <em>structuring data</em> and optimizing processes.
+                I <em>love</em> to <strong>structuring</strong> data and <strong>optimizing</strong> processes.
             </p>
         </article>
-        <article>
+        <article id="experiences">
             <h2>Experiences</h2>
             <section>
                 <header>
@@ -47,17 +53,33 @@
                 </p>
             </section>
         </article>
-        <article>
+        <article id="skills">
             <h2>Skills</h2>
             <section>
                 <h3>Soft Skills</h3>
+                <ul>
+                    <li>organizational talent and planning skills</li>
+                    <li>strong problem-solving skills</li>
+                    <li>high quality awareness</li>
+                </ul>
             </section>
             <section>
                 <h3>Technische Skills</h3>
+                <ul>
+                    <li>HTML and CSS</li>
+                    <li>JavaScript (comming soon)</li>
+                    <li>Angular, Vue.js, Node.js (comming soon)</li>
+                </ul>
             </section>
         </article>
-        <article>
+        <article id="contact">
             <h2>contact</h2>
+            <ol>
+                <li>
+                    <strong>E-Mail:</strong>
+                    <a href="mailto:me">E-Mail</a>
+                </li>
+            </ol>
         </article>
     </main>
 </body>
