--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>The CV of Jens</title>
     <meta name="description" content="CV of Jens">
     <meta name="author" content="Jens">
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link href="https://fonts.googleapis.com/css2?family=Oswald&family=Roboto&display=swap" rel="stylesheet" />
 </head>
 
 <body>
