main mit border-top

--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
     <header>
         <h1>Der Jens</h1>
         <p>Data Master</p>
-        <nav>
+        <nav class="nav-link">
             <a href="#profile">Profile</a>
             <a href="#experience">Experience</a>
             <a href="#skills">Skills</a>
             <a href="#contact">Contact</a>
         </nav>
     </header>
-    <main>
+    <main class="main">
         <article id="profile">
             <h2>Profile</h2>
             <p>
