--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <header>
         <h1>Der Jens</h1>
-        <p>Data Master</p>
+        <p class="profession">Data Master</p>
         <nav class="nav-link">
             <a href="#profile">Profile</a>
             <a href="#experience">Experience</a>
