--- a/index.html
+++ b/index.html
@@ -10,22 +10,26 @@
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link href="https://fonts.googleapis.com/css2?family=Oswald&family=Roboto&display=swap" rel="stylesheet" />
+    <link rel="stylesheet" href="https://unpkg.com/normalize.css@8.0.1/normalize.css" />
 </head>
 
 <body>
     <header>
-        <h1>Der Jens</h1>
-        <p class="profession">Data Master</p>
+        <div class="heading-group">
+            <h1 class="main-heading">Der Jens</h1>
+            <p class="profession">Data Master</p>
+        </div>
         <nav class="nav-link">
             <a href="#profile">Profile</a>
-            <a href="#experience">Experience</a>
+            <a href="#experiences">Experience</a>
             <a href="#skills">Skills</a>
             <a href="#contact">Contact</a>
         </nav>
+        <aside class="hire-me"><a href="mailto:me">Hire Me</a></aside>
     </header>
     <main class="main">
         <article id="profile">
-            <h2>Profile</h2>
+            <h2 class="article-heading">Profile</h2>
             <p>
                 Hey, my name is Jens!<br>
                 I <em>love</em> to <strong>structuring</strong> data and <strong>optimizing</strong> processes.
@@ -35,8 +39,9 @@
             <h2>Experiences</h2>
             <section>
                 <header>
-                    <h3>Backoffice Manager</h3>
-                    <p>July 2017 - </p>
+                    <h3 class="experience-heading">Backoffice Manager</h3>
+                    <h3 class="experience-subheading">July 2017 - </h3>
+
                 </header>
                 <p>
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus, autem necessitatibus. Modi magnam
@@ -46,8 +51,8 @@
             </section>
             <section>
                 <header>
-                    <h3>Web Design Freelancer & E-Commerce-Manager</h3>
-                    <p>August 2006 - 2017</p>
+                    <h3 class="experience-heading">Web Design Freelancer & E-Commerce-Manager</h3>
+                    <h3 class="experience-subheading">August 2006 - 2017</h3>
                 </header>
                 <p>
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus, autem necessitatibus. Modi magnam
